k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-web-service
  labels:
    app: blog-web
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      # nodePort: 32323
  selector:
    app: blog-web
  type: ClusterIP
